force-app/main/default/objects/Contact/fields/Administrador__c.field-meta.xml
<CustomField>
    <fullName>Administrador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Administrador</label>
    <type>Checkbox</type>
</CustomField>