force-app/main/default/objects/Contact/fields/Codigo_postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_postal__c</fullName>
    <label>Código postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>