force-app/main/default/objects/Contact/fields/Condicion__c.field-meta.xml
<CustomField>
    <fullName>Condicion__c</fullName>
    <label>Condición</label>
    <length>100</length>
    <type>Text</type>
</CustomField>