force-app/main/default/objects/Contact/fields/CONGA_TxtCom3__c.field-meta.xml
<CustomField>
    <fullName>CONGA_TxtCom3__c</fullName>
    <formula>&apos;Actúa en su calidad de &apos; +  IF(ISBLANK(Condicion__c), &quot;________&quot;, Condicion__c) + &apos; en virtud de escritura otorgada en Madrid el día &apos; + 
IF(ISBLANK(TEXT(Fecha_de_Escritura__c)), &quot;________&quot;, TEXT(Fecha_de_Escritura__c)) + &apos; ante el notario don &apos; + IF(ISBLANK(Nombre_notario__c), &quot;________&quot;, Nombre_notario__c) + &apos; con el número &apos; + IF(ISBLANK(FirstName), &quot;________&quot;, FirstName) + &apos; &apos; + IF(ISBLANK(LastName), &quot;________&quot;, LastName) + &apos; de su protocolo, que causó la inscripción&apos; + IF(ISBLANK(TEXT(Tipo_de_documento__c)), &quot;________&quot;, TEXT(Tipo_de_documento__c)) + &apos; &apos; + IF(ISBLANK(N_Documento__c), &quot;________&quot;, N_Documento__c) + &apos;, en su condición de &apos; + IF(ISBLANK(Condicion__c), &quot;________&quot;, Condicion__c) + &apos; conforme a escritura otorgada por el notario de &apos; + IF(ISBLANK(Lugar_de_notaria__c), &quot;________&quot;, Lugar_de_notaria__c) + &apos; Don &apos; + IF(ISBLANK(Nombre_notario__c), &quot;________&quot;, Nombre_notario__c) + &apos; en fecha &apos; + IF(ISBLANK(TEXT(Fecha_de_Escritura__c)), &quot;________&quot;, TEXT(Fecha_de_Escritura__c)) + &apos; con el nº de su protocolo &apos; + IF(ISBLANK(Numero_de_protocolo__c), &quot;________&quot;, Numero_de_protocolo__c)+&apos;.&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_TxtCom3</label>
    <type>Text</type>
</CustomField>