force-app/main/default/objects/Contact/fields/ContactoPrincipal__c.field-meta.xml
<CustomField>
    <fullName>ContactoPrincipal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contacto Principal</label>
    <type>Checkbox</type>
</CustomField>