force-app/main/default/objects/Contact/fields/Dc_Provincia__c.field-meta.xml
<CustomField>
    <fullName>Dc_Provincia__c</fullName>
    <formula>Localidad__r.Provincia__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provincia</label>
    <type>Text</type>
</CustomField>