force-app/main/default/objects/Contact/fields/Direccion_Extranjera_contacto__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Extranjera_contacto__c</fullName>
    <inlineHelpText>Indique la Dirección Extranjera COMPLETA en este campo.</inlineHelpText>
    <label>Dirección Extranjera</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>