force-app/main/default/objects/Contact/fields/Disponibilidad_horaria__c.field-meta.xml
<CustomField>
    <fullName>Disponibilidad_horaria__c</fullName>
    <label>Disponibilidad horaria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mañanas</fullName>
            </value>
            <value>
                <fullName>Tardes</fullName>
            </value>
            <value>
                <fullName>Noches</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>