force-app/main/default/objects/Contact/fields/Estado_Civil__c.field-meta.xml
<CustomField>
    <fullName>Estado_Civil__c</fullName>
    <label>Estado Civil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Casado/a</fullName>
            </value>
            <value>
                <fullName>Divorciado/a</fullName>
            </value>
            <value>
                <fullName>Pareja de Hecho</fullName>
            </value>
            <value>
                <fullName>Separado/a</fullName>
            </value>
            <value>
                <fullName>Soltero/a</fullName>
            </value>
            <value>
                <fullName>Viudo/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>