force-app/main/default/objects/Contact/fields/HaFirmado__c.field-meta.xml
<CustomField>
    <fullName>HaFirmado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>El candidato ha firmado.</description>
    <inlineHelpText>El candidato ha firmado.</inlineHelpText>
    <label>Ha firmado</label>
    <type>Checkbox</type>
</CustomField>