force-app/main/default/objects/Contact/fields/Idioma_contacto__c.field-meta.xml
<CustomField>
    <fullName>Idioma_contacto__c</fullName>
    <label>Idioma contacto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Idioma</valueSetName>
    </valueSet>
</CustomField>