force-app/main/default/objects/Contact/fields/Localidad_Extranjera_contacto__c.field-meta.xml
<CustomField>
    <fullName>Localidad_Extranjera_contacto__c</fullName>
    <label>Localidad Extranjera</label>
    <length>150</length>
    <type>Text</type>
</CustomField>