force-app/main/default/objects/Contact/fields/Lugar_de_notaria__c.field-meta.xml
<CustomField>
    <fullName>Lugar_de_notaria__c</fullName>
    <label>Lugar de notaría</label>
    <type>TextArea</type>
</CustomField>