force-app/main/default/objects/Contact/fields/N_Documento__c.field-meta.xml
<CustomField>
    <fullName>N_Documento__c</fullName>
    <label>Nº Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>