force-app/main/default/objects/Contact/fields/N_Piso__c.field-meta.xml
<CustomField>
    <fullName>N_Piso__c</fullName>
    <label>Nº Piso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>