force-app/main/default/objects/Contact/fields/Nombre_notario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_notario__c</fullName>
    <label>Nombre notario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>