force-app/main/default/objects/Contact/fields/Numero_de_protocolo__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_protocolo__c</fullName>
    <label>Número de protocolo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>