force-app/main/default/objects/Contact/fields/Numero_via__c.field-meta.xml
<CustomField>
    <fullName>Numero_via__c</fullName>
    <label>Número vía</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>