force-app/main/default/objects/Contact/fields/NumeroViaText__c.field-meta.xml
<CustomField>
    <fullName>NumeroViaText__c</fullName>
    <label>Número Vía</label>
    <length>128</length>
    <type>Text</type>
</CustomField>