force-app/main/default/objects/Contact/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Contactos (País)</relationshipLabel>
    <relationshipName>Contactos2</relationshipName>
    <type>Lookup</type>
</CustomField>