force-app/main/default/objects/Contact/fields/Pais_nacimiento__c.field-meta.xml
<CustomField>
    <fullName>Pais_nacimiento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País de nacimiento</label>
    <referenceTo>Pais__c</referenceTo>
    <relationshipLabel>Contactos</relationshipLabel>
    <relationshipName>Contactos</relationshipName>
    <type>Lookup</type>
</CustomField>