force-app/main/default/objects/Contact/fields/PaisPardot__c.field-meta.xml
<CustomField>
    <fullName>PaisPardot__c</fullName>
    <formula>Pais__r.Name</formula>
    <label>País Pardot</label>
    <type>Text</type>
</CustomField>