force-app/main/default/objects/Contact/fields/Profesion__c.field-meta.xml
<CustomField>
    <fullName>Profesion__c</fullName>
    <label>Profesión</label>
    <length>255</length>
    <type>Text</type>
</CustomField>