force-app/main/default/objects/Contact/fields/Puerta__c.field-meta.xml
<CustomField>
    <fullName>Puerta__c</fullName>
    <label>Puerta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>