force-app/main/default/objects/Contact/fields/Representante_legal__c.field-meta.xml
<CustomField>
    <fullName>Representante_legal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Representante legal</label>
    <type>Checkbox</type>
</CustomField>