force-app/main/default/objects/Contact/fields/Sitio_web__c.field-meta.xml
<CustomField>
    <fullName>Sitio_web__c</fullName>
    <label>Sitio web</label>
    <type>Url</type>
</CustomField>