force-app/main/default/objects/Contact/fields/Tipo_persona__c.field-meta.xml
<CustomField>
    <fullName>Tipo_persona__c</fullName>
    <formula>Account.Tipo_de_persona__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo persona</label>
    <type>Text</type>
</CustomField>