force-app/main/default/objects/Contact/fields/Tipo_via__c.field-meta.xml
<CustomField>
    <fullName>Tipo_via__c</fullName>
    <label>Tipo vía</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipo_de_via</valueSetName>
    </valueSet>
</CustomField>