force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Account.Email__c</columns>
    <columns>Account.Movil_empresa__c</columns>
    <columns>Account.DP_Pais__c</columns>
    <columns>Idioma_contacto__c</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>Pais__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los Contactos</label>
</ListView>