force-app/main/default/objects/Contact/listViews/LORENA_G_R.listView-meta.xml
<ListView>
    <fullName>LORENA_G_R</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.LAST_NAME</field>
        <operation>equals</operation>
        <value>García Rodríguez</value>
    </filters>
    <label>LORENA G</label>
</ListView>